--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "npx eslint src/**/*.ts",
     "build": "tsc",
     "dev": "ts-node-dev src/app.ts",
+    "dev-inspect": "ts-node-dev --debug --inspect -- src/app.ts",
     "start": "ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
