--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
   }
