--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
-    "eslint": "^8.21.0",
+    "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.25.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
