--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "starterkits",
+  "name": "mesto-api",
   "version": "1.0.0",
-  "description": "< Добавьте описание проекта в свободной форме >",
+  "description": "Базовый API для проекта Mesto",
   "main": "dist/app.js",
   "scripts": {
     "lint": "npx eslint src/**/*.ts",
@@ -11,7 +11,7 @@
     "start": "ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "< Укажите здесь автора работы >",
+  "author": "web77",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -19,12 +19,12 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
