--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "web77",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
     "@types/validator": "^13.7.10",
@@ -27,6 +28,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
