--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.6.3",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
@@ -31,6 +32,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.5.0",
     "validator": "^13.7.0"
   }
