--- a/.eslintrc
+++ b/.eslintrc
@@ -32,7 +32,7 @@
     {
       "files": ["*.ts"],
       "rules": {
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle":  ["error", { "allow": ["_id"] }]
       }
     }
   ]
